fix slide width + vertical align

--- a/css/main.less
+++ b/css/main.less
@@ -111,6 +111,9 @@ header {
 			a {
 				color: white;
 				display: block;
+        width: 288px;
+        margin-left: 20px;
+				
 				&:hover {
 					text-decoration: none;
 
@@ -123,6 +126,8 @@ header {
 			span {
 				vertical-align: middle;
 				line-height: 1em;
+        display: inline-block;
+        max-width: 226px;
 			}
 			
 			&:hover {
