--- a/css/responsive.less
+++ b/css/responsive.less
@@ -27,6 +27,14 @@
       #logo {
         display: none;
       }
+      
+      .slide a {
+        width: 260px;
+      }
+      
+      .slide span {
+        max-width: 200px;
+      }
     }
   }
   
